# nav_robot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nav_robot/lib/nav_robot/: battery_sim_node
install/nav_robot/share/ament_index/resource_index/nav2_behavior_tree__pluginlib__plugin/: nav_robot
install/nav_robot/share/ament_index/resource_index/package_run_dependencies/: nav_robot
install/nav_robot/share/ament_index/resource_index/parent_prefix_path/: nav_robot
install/nav_robot/share/nav_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav_robot/share/nav_robot/behaviour_tree/: bt_nodes.cpp
install/nav_robot/share/nav_robot/cmake/: nav_robotConfig-version.cmake  nav_robotConfig.cmake
install/nav_robot/share/nav_robot/config/: amcl.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  poses.yaml  view_bot.rviz
install/nav_robot/share/nav_robot/environment/: ament_prefix_path.dsv  path.dsv
install/nav_robot/share/nav_robot/launch/: bt_nav.launch.py  display.launch.py  display_launch.py  gspawn.launch.py
install/nav_robot/share/nav_robot/maps/: amcl_map.pgm  amcl_map.yaml  nav_map.pgm  nav_map.yaml
install/nav_robot/share/nav_robot/scripts/: battery_state.cpp  set_initial_pose.py
install/nav_robot/share/nav_robot/urdf/: colors.xacro  gazebo_control.xacro  gazebo_diff_control.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  temp.urdf
install/nav_robot/share/nav_robot/worlds/: gazebo.world
log/: latest_build
src/nav_robot/: CMakeLists.txt  package.xml
src/nav_robot/behaviour_tree/: bt_plugins.xml  task_bt.xml
src/nav_robot/config/: amcl.yaml  poses.yaml
src/nav_robot/launch/: display.launch.py  gspawn.launch.py
src/nav_robot/maps/: nav_map.pgm  nav_map.yaml
src/nav_robot/scripts/: battery_state.cpp  task_manager.cpp
src/nav_robot/urdf/: colors.xacro  gazebo_control.xacro  gazebo_diff_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/nav_robot/worlds/: gazebo.world
